<package format="2">
  <name>mobilelab_description</name>
  <version>0.0.1</version>
  <description>
    Provides a URDF for a golf cart
  </description>
  <maintainer email="huber.emanuel@outlook.com">Emanuel Huber</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
